# SmartGripper-Demo

./: CMakeLists.txt  README.md  package.xml
include/sg/: sg_controller.hpp
src/: minimal_example.cpp  sg_controller.cpp  sg_controller_node.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
